Bug 733596 - Tell the compositor about the new surface size on surface change. r=bgirard a=blocking-fennec